--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,7 @@ nav ul li a:hover {
   linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), 
   url("./assets/home-inspector.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   height: 60vh;
   position: relative;
